--- a/Pages/ItemCards.cshtml
+++ b/Pages/ItemCards.cshtml
@@ -150,7 +150,7 @@
 <div class="row">
     <div class="col-12 mb-4 m-auto">
         <div class="card border-0 shadow components-section p-3">
-            <form>
+            <form method="post">
 
                 @for (int i = 0; i < Model.ItemCardsFromReport.Count; i++)
                 {
@@ -180,6 +180,7 @@
                                 <label>Item Type Code</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>  
                                 <input asp-for="@Model.ItemCardsFromReport[i].ItemTypeCode" class="form-control" readonly />
                             </div> *@
+                             <input asp-for="@Model.ItemCardsFromReport[i].ItemTypeCode" class="form-control" type="hidden" />
                         </div>
                     
 
